Prevent overflow on bulletins with HTML

--- a/mcp/static/css/mcp/mcp.css
+++ b/mcp/static/css/mcp/mcp.css
@@ -79,6 +79,7 @@ div#content-wrapper{
 }
 .bulletin-body > .text {
 	padding-top: 6px;
+    max-height: 60px;
 }
 
 /* Reminders */
